# linkding-cn

./: .dockerignore  .env.sample  .gitignore  CHANGELOG.md  README.md  bootstrap.sh  esbuild.config.mjs  package-lock.json  package.json  pyproject.toml
.github/workflows/: build.yaml  main.yaml
bookmarks/: apps.py  context_processors.py  forms.py  models.py  queries.py  signals.py  urls.py  utils.py
bookmarks/api/: routes.py  serializers.py
bookmarks/frontend/: index.js  init.js  shortcuts.js
bookmarks/migrations/: 0069_bookmark_latest_article_annotation.py  0070_preserve_annotations_when_article_deleted.py  0071_readingprogress.py  0072_userprofile_display_read_bookmark_action.py  0073_userprofile_bookmark_actions_statuses.py  0074_add_reader_settings.py  0075_add_bookmark_quick_edits.py  0076_add_highlights_search_preferences.py  0077_add_highlights_per_page.py  0078_userprofile_bookmark_quick_tags.py  0079_add_bookmark_toolbar_modules.py  0080_add_bookmark_date_route.py  0081_add_highlights_sidebar_fields.py  0082_add_highlight_copy_settings.py  0083_userprofile_enable_random_button_and_more.py  0084_add_snapshot_retry_fields.py  0085_userprofile_enable_preview_image_placeholders.py  0086_bookmark_title_to_textfield.py  0087_favicon_cache.py  0088_populate_faviconcache.py  0089_remove_bookmark_favicon_file.py  0090_rsssubscription.py
bookmarks/services/: articles.py  assets.py  bookmarks.py  defuddle.py  defuddle_processor.py  favicon_loader.py  icon_loader.py  importer.py  reader_processor.py  rss.py  search_query_parser.py  tasks.py  website_loader.py
bookmarks/settings/: base.py  e2e.py
bookmarks/static/: reader-pending.js  reader-unavailable.js
bookmarks/styles/: bookmark-details.css  bookmark-page.css  (+10 more)
docker/: default.Dockerfile
(+142 files in other folders)
