[project]
name = "linkding-cn"
version = "1.1.0"
description = "Self-hosted bookmark manager - Chinese enhanced fork of linkding"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "bleach>=6.3.0",
    "bleach-allowlist>=1.0.3",
    "django>=6.0",
    "djangorestframework>=3.17.1",
    "drissionpage>=4.1.1.2",
    "huey>=3.0.0",
    "markdown>=3.10.2",
    "mozilla-django-oidc>=5.0.2",
    "python-dateutil>=2.9.0.post0",
    "pypinyin>=0.55.0",
    "requests>=2.33.1",
    "supervisor>=4.3.0",
    "uwsgi>=2.0.31",
    "waybackpy>=3.0.6",
]

[dependency-groups]
dev = [
    "coverage>=7.13.5",
    "django-debug-toolbar>=6.3.0",
    "playwright>=1.59.0",
    "psycopg[binary]>=3.3.4",
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.12",
]
# For PostgreSQL support, use the binary release for development so that not
# everyone needs to build from source. For production, use a separate dependency
# group that builds the driver from source. uv also needs to build it from
# source to update the lockfile, which requires libpq. On macOS:
# - brew install libpq
# - export PATH="/opt/homebrew/opt/libpq/bin:$PATH"
# - uv add --group postgres psycopg[c]
postgres = [
    "psycopg[c]>=3.3.4",
]

[tool.uv]
# Prefer system Python for now, less complications when copying the venv in the Docker build
python-preference = "system"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
# ignore line length violations
ignore = ["E501"]
